# Fermi

./: .gitignore  CMakeLists.txt  Doxyfile  Fermi.cpp  LICENSE.txt  README.md  Test.frm
.cache/clangd/index/: FermiLexerTypes.cpp.F48479DB1A74201B.idx  FermiLexerTypes.hpp.B01AA8551E343614.idx
Common/: CMakeLists.txt  ConsoleColors.hh  Errors.cpp  Errors.hh
Fermi/: CMakeLists.txt  Fermi.cpp
Fermi-Lang/: Definitions.md  Expressions.md  Functions.md  Grammar.ebnf  Semantics.md  Standard Library.md  Statements.md  Types.md  Variables and Entities.md
Fermi-Lang/Standard-Library/Core/Language-Support/: Errors.frm  Memory.frm
Fermi-Lang2/: Lang.md
Fermi/Lexical-Analysis/: CMakeLists.txt
Fermi/Lexical-Analysis/include/: FermiLexer.hpp  FermiLexer.ll  FermiLexerTypes.hpp
Fermi/Lexical-Analysis/src/: FermiLexer.cpp  FermiLexerTypes.cpp
Fermi/Semantic-Analysis/: CMakeLists.txt
Fermi/Semantic-Analysis/include/: ASTErrors.hpp  ASTGenerator.hpp  ASTNode.hpp  AssignNode.hpp  DAGNode.hpp  ExpressionNodes.hpp  FermiModule.hpp  IRGenerator.hpp  StatementNodes.hpp  Type.hpp  Visitor.hpp
Fermi/Semantic-Analysis/include/ASTNodes/: AST.hpp  ASTNode.hpp  ExpressionASTNode.hpp  ExpressionNodes.hpp  StatementASTNode.hpp  StatementNodes.hpp
Fermi/Semantic-Analysis/src/: ASTGenerator.cpp  ASTNode.cpp  FermiModule.cpp  IRGenerator.cpp  Type.cpp
Fermi/Semantic-Analysis/src/ASTNodes/: ExpressionASTNode.cpp  StatementASTNode.cpp
Fermi/Setup/: CMakeLists.txt
Fermi/Setup/include/: FermiCommandArguments.hpp
Fermi/Setup/src/: FermiCommandArguments.cpp
Fermi/Syntax-Analysis/: CMakeLists.txt
Fermi/Syntax-Analysis-New/: CMakeLists.txt
Fermi/Syntax-Analysis-New/include/: FermiLexer.hpp  FermiLexer.ll  FermiParser.hpp
Fermi/Syntax-Analysis-New/include/SyntaxTree/: ExpressionNodes.hpp  StatementNodes.hpp
Fermi/Syntax-Analysis/include/: FermiGrammar.ebnf  FermiLexer.hpp  FermiLexer.ll  FermiParser.hpp  FermiParser.yy  FermiParserReport.txt  FermiSourceFile.hpp  Location.hpp  Visitor.hpp
Fermi/Syntax-Analysis/include/Static-Syntax-Tree/: ExpressionNodes.hpp  FermiParserNew.hpp  StatementNodes.hpp  SyntaxTreeBase.hpp
Fermi/Syntax-Analysis/include/Syntax-Tree/: ExpressionNode.hpp  ExpressionNodes.hpp  ExpressionSyntaxNodes.hpp  StatementNode.hpp  StatementNodes.hpp  StatementSyntaxNodes.hpp  SyntaxBase.hpp  SyntaxNode.hpp  SyntaxNodes.hpp
Fermi/Syntax-Analysis/src/: FermiLexer.cpp  FermiParser.cpp  FermiParser.output  FermiSourceFile.cpp
Fermi/Syntax-Analysis/src/Syntax-Tree/: ExpressionNode.cpp  StatementNode.cpp
Fermi/SyntaxAnalysis/: CMakeLists.txt
Fermi/SyntaxAnalysis/include/: FermiLexer.hpp  FermiLexer.ll  FermiParser.hpp
Fermi/SyntaxAnalysis/include/SyntaxTree/: ExpressionNodes.hpp  StatementNodes.hpp  SyntaxNode.hpp  SyntaxNodes.hpp  SyntaxNodesFwd.hpp
Fermi/SyntaxAnalysis/src/: FermiLexer.cpp  FermiParser.cpp
Fermi/SyntaxAnalysis/src/SyntaxTree/: ExpressionNodes.cpp  StatementNodes.cpp
Lexical-Analysis/: CMakeLists.txt  Scanner.cpp  Scanner.hh
Syntax-Analysis/: CMakeLists.txt  Grammar.ebnf  Parser.cpp  Parser.hh
Syntax-Analysis/SyntaxTree/: CMakeLists.txt  ExpressionNodes.hh  StatementNodes.hh  SyntaxNodes.hh
Tests/: CMakeLists.txt
Tests/Lexer-Tests/: CMakeLists.txt  TestLexLiterals.cpp  TestLexerHelpers.hpp
Tests/Lexical-Analysis/: CMakeLists.txt  TestIdentifierKeywords.cpp  TestNumberLiterals.cpp  TestOperators.cpp  TestSpaces.cpp  TestStringLiterals.cpp
Tests/Parser-Tests/: CMakeLists.txt  LexerTestUtils.hpp  TestLexKeywords.cpp  TestLexLiterals.cpp  TestLexMultiTokens.cpp  TestLexOperators.cpp  TestParseAssignmentStatement.cpp  TestParseExpressionStatement.cpp  TestParsePrintStatement.cpp  TestParseVariableDeclarationStatement.cpp
Tests/Setup-Tests/: CMakeLists.txt  TestCommandLineArgs.cpp
Tests/Syntax-Analysis/: CMakeLists.txt  TestExpressionStatement.cpp
Tests/SyntaxAnalysisTests/: CMakeLists.txt
Tests/SyntaxAnalysisTests/LexerTests/: CMakeLists.txt  TestLexLiterals.cpp
