cmake_minimum_required(VERSION 3.12)
project(Fermi CXX C)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(FERMI_MAJOR_VERSION 0)
set(FERMI_MINOR_VERSION 2)
set(FERMI_PATCH_VERSION 0)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
set(CMAKE_CXX_EXTENSIONS OFF)

add_compile_definitions(FERMI_MAJOR_VERSION=${FERMI_MAJOR_VERSION})
add_compile_definitions(FERMI_MINOR_VERSION=${FERMI_MINOR_VERSION})
add_compile_definitions(FERMI_PATCH_VERSION=${FERMI_PATCH_VERSION})

find_package(LLVM REQUIRED)

add_subdirectory(Fermi)

# add_subdirectory(Tests)