set(SEMANTIC_ANALYSIS_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(SEMANTIC_ANALYSIS_INCLUDE_DIR ${SEMANTIC_ANALYSIS_DIR}/include)
set(SEMANTIC_ANALYSIS_SOURCE_DIR ${SEMANTIC_ANALYSIS_DIR}/src)

add_library(FermiSemanticAnalysis ${SEMANTIC_ANALYSIS_SOURCE_DIR}/Type.cpp)
target_include_directories(FermiSemanticAnalysis PRIVATE ${SEMANTIC_ANALYSIS_INCLUDE_DIR})